--- a/style.css
+++ b/style.css
@@ -4,19 +4,24 @@
     box-sizing: border-box;
     font-family:'poppins',sans-serif;
 }
+html{
+    scroll-behavior: smooth;
+}
+
 body{
-   background: #080808;
+   background: #152023;
    color: #fff;
 }
 #header{
     width:100% ;
     height: 100vh;
-    background: url(assets/bgsujit.jpg);
+    /* background: url(assets/background.jpg); */
     background-size: cover;
     background-position: center;
 }
 .container{
     padding: 10px 10%;
+  
 }
 nav{
     display: flex;
@@ -26,7 +31,8 @@ nav{
  
 }
 .logo{
-    width: 140px;
+    width: 60px;
+    border-radius: 50%;
 }
 
 nav ul li{
@@ -44,7 +50,7 @@ nav ul li a::after{
     content: '';
     width: 0%;
     height: 3px;
-    background: #ff004f;
+    background: #10d3dc;
     position: absolute;
     left: 0;
     bottom:-6px;
@@ -79,6 +85,7 @@ nav ul li a:hover::after{
     flex-basis: 35%;
 }
 .about__col-1 img{
+    margin-top: 3rem;
     width: 100%;
     border-radius: 50%;
 }
@@ -129,3 +136,259 @@ nav ul li a:hover::after{
 .tab__contents.active-tab{
     display: block;
 }
+/* ---------services--------- */
+#services{
+    padding: 30px 0;
+}
+.services-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px ,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.services-list div{
+    background: #48629a;
+    padding: 40px;
+    font-size: 13px;
+    font-weight:300 ;
+    border-radius: 10px;
+    transition: background 0.5s,transform 0.5s;
+}
+.services-list div i{
+    font-size: 50px;
+    margin-bottom: 30px;
+}
+.services-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+}
+.services-list div a{
+    text-decoration: none;
+    color: white;
+    font-size: 12px;
+    margin-top: 20px;
+    display: inline-block;
+}
+.services-list div:hover{
+    background: #10d3dc;
+    transform: translateY(-10px);
+}
+/* ----------PORTFOLIO----------- */
+#portfolio{
+    padding: 50px 0;
+}
+.work-list{
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.work{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+}
+.work img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+.layer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), #03b3bc);
+    position: absolute;
+    left: 0;
+    bottom:0;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: height 0.5s;
+}
+.layer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+
+
+}
+.layer a {
+  margin-top: 20px;
+  color: #ff004f;
+  text-decoration: none;
+  font-size: 18px;
+  line-height:60px;
+  background: #fff;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  text-align: center;
+}
+.work:hover img{
+transform: scale(1.1);
+}
+.work:hover .layer{
+   height: 100%; 
+}
+.btn{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #10d3dc;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    transition: background 0.5s;
+}
+.btn:hover{
+    background: #ff004f;
+}
+/* -----------------contact---------------- */
+.contact-left{
+    flex-basis: 35%;
+}
+.contact-right{
+    flex-basis: 60%;
+}
+
+.contact-left p{
+   margin-top: 30px; 
+   font-size: 18px;
+}
+.contact-left p i {
+    color:#ababab;
+    margin-right: 15px;
+    font-size: 25px;
+}
+
+.social-icons{
+    margin-top: 30px;
+}
+.social-icons a{
+   text-decoration: none;
+   font-size: 30px;
+   margin-right: 15px;
+   color: #ababab;
+   display: inline-block; 
+   transition: transfrom 0.5s;
+}
+.social-icons a:hover{
+    color: #10d3dc;
+    cursor: pointer;
+    transform: translateY(-5px);
+}
+
+.btn.btn2{
+    display: inline-block;
+    background:#10d3dc;
+}
+
+.contact-right form{
+    width: 100%;
+}
+form input, form textarea{
+    width: 100%;
+    border: 0;
+    outline: none;
+    background:#40c1c2 ;
+    padding: 15px;
+    margin: 15px 0;
+    color:white;
+    font-size: 18px;
+    border-radius: 6px;
+
+
+}
+ form .btn2{
+    padding: 14px 60px;
+    font-size: 18px;
+    margin-top: 20px;
+    cursor: pointer;
+ }
+ .copyright{
+    width: 100%;
+    text-align: center;
+    padding:25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+ }
+
+ nav .fa-solid{
+    display: none;
+ }
+
+ /* ------------------------css for small screen------------------- */
+ @media only screen and (max-width:600px){
+    #header{
+       background: #152023; 
+    }
+    .header__text{
+        margin-top: 50%;
+        font-size: 16px;
+    }
+    .header__text h1{
+        font-size: 30px;
+    }
+    nav .fa-solid{
+        display:block;
+        font-size: 25px;
+    }
+
+   nav ul{
+        background:#10d3dc;
+        position: fixed;
+        top: 0;
+        right: -200px;
+        width: 200px;
+        height: 100vh;
+        padding-top: 50px;
+        z-index: 2;
+        transition: right 0.5s;
+
+    }
+     nav ul li{
+        display: block;
+        margin: 25px;
+    }
+
+    ul li .fa-solid{
+        position: absolute;
+        top: 25px;
+        left: 25px;
+        cursor: pointer;
+
+    }
+    .sub-title{
+        font-size: 40px;
+    }
+
+    /* ---------------about section-------------- */
+    .row{
+        display: block;
+        justify-content: space-between;
+        flex-wrap: wrap;
+    }
+    .about__col-1{
+        
+    }
+    .about__col-1 img{
+        margin-bottom: 2rem;
+        width: 80%;
+        /* height: 200px; */
+        border-radius: 50%;
+    }
+    .sub-title{
+        font-size: 60px;
+        font-weight:600 ;
+        color: white;
+        margin-bottom: 2rem;
+    }
+ }
