--- a/style.css
+++ b/style.css
@@ -323,6 +323,7 @@ form input, form textarea{
 
  nav .fa-solid{
     display: none;
+    position: relative;
  }
 
  /* ------------------------css for small screen------------------- */
@@ -332,10 +333,10 @@ form input, form textarea{
     }
     .header__text{
         margin-top: 100%;
-        font-size: 16px;
+        font-size: 20px;
     }
     .header__text h1{
-        font-size: 30px;
+        font-size: 35px;
     }
     nav .fa-solid{
         display:block;
