--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     background-position: center;
 }
 .container{
-    padding: 10px 10%;
+    padding: 20px 10%;
   
 }
 nav{
@@ -332,8 +332,9 @@ form input, form textarea{
        background: #152023; 
     }
     .header__text{
-        margin-top: 100%;
+        margin-top: 50%;
         font-size: 20px;
+        padding-bottom: 20px;
     }
     .header__text h1{
         font-size: 35px;
@@ -372,6 +373,11 @@ form input, form textarea{
     }
 
     /* ---------------about section-------------- */
+    #about{
+        padding: 50px 0;
+        margin-top: 10%;
+        color: #ababab;
+    }
     .row{
         display: block;
         justify-content: space-between;
