--- a/style.css
+++ b/style.css
@@ -247,9 +247,7 @@ transform: scale(1.1);
     color: #fff;
     transition: background 0.5s;
 }
-.btn:hover{
-    background: #ff004f;
-}
+
 /* -----------------contact---------------- */
 .contact-left{
     flex-basis: 35%;
@@ -288,6 +286,7 @@ transform: scale(1.1);
 .btn.btn2{
     display: inline-block;
     background:#10d3dc;
+    transition: transform 0.5s;
 }
 
 .contact-right form{
@@ -325,6 +324,11 @@ form input, form textarea{
     display: none;
     position: relative;
  }
+   /* --------------cv and form submit button annimation--------- */
+   .btn.btn2:hover{
+    background: #ff004f;
+    transform: scale3d(20px);
+}
 
  /* ------------------------css for small screen------------------- */
  @media only screen and (max-width:600px){
@@ -371,7 +375,7 @@ form input, form textarea{
     .sub-title{
         font-size: 40px;
     }
-
+ 
     /* ---------------about section-------------- */
 
     .row{
