--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body{
 #header{
     width:100% ;
     height: 100vh;
-    /* background: url(assets/background.jpg); */
-    background-size: cover;
-    background-position: center;
+   
+ 
 }
 .container{
     padding: 10px 10%;
@@ -60,7 +59,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header__text{
-    margin-top: 20%;
+    
     font-size: 30px;
 }
 
@@ -139,12 +138,14 @@ nav ul li a:hover::after{
 /* ---------services--------- */
 #services{
     padding: 30px 0;
+    
 }
 .services-list{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px ,1fr));
     grid-gap: 40px;
     margin-top: 50px;
+ 
 }
 .services-list div{
     background: #48629a;
@@ -337,7 +338,7 @@ form input, form textarea{
       
     }
     .header__text{
-        margin-top: 100%;
+        margin-top: 100px;
         font-size: 20px;
         padding-bottom: 20px;
     }
@@ -388,24 +389,13 @@ form input, form textarea{
         flex-basis: 100%;
     }
      .about__col-1{
-        
+        margin-top: 10vwvw;
         margin-bottom: 30px;
      }
      .about__col-2{
         font-size: 14px;
      }
-    /* .about__col-1 img{
-        margin-top: 2rem;
-        margin-bottom: 2rem;
-        width: 80%;
-        border-radius: 50%;
-    }
-    .sub-title{
-        font-size: 40px;
-        font-weight:600 ;
-        color: white;
-        margin-bottom: 2rem;
-    } */
+    
     /* --------CONTACT------ */
     .contact-left, .contact-right{
         flex-basis: 100%;
@@ -416,3 +406,6 @@ form input, form textarea{
     margin-top: -40px;
     display: blockd;
  }
+
+ /* --------------------keyframes-------------------- */
+ 
