style.css updated

--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ nav ul li a:hover::after{
     width: 100%;
 }
 .header__text{
-    
+    margin-top: 28%;
     font-size: 30px;
 }
 
@@ -72,7 +72,7 @@ nav ul li a:hover::after{
 }
 /* ----------about--------- */
 #about{
-    padding: 80px 0;
+    padding: 50px 0;
     color: #ababab;
 }
 .row{
@@ -389,7 +389,7 @@ form input, form textarea{
         flex-basis: 100%;
     }
      .about__col-1{
-        margin-top: 10vwvw;
+        margin-top: 5vw;
         margin-bottom: 30px;
      }
      .about__col-2{
