--- a/style.css
+++ b/style.css
@@ -343,7 +343,7 @@ form input, form textarea{
       
     }
     .header__text{
-        margin-top: 150px;
+        margin-top: 60%;
         font-size: 20px;
         padding-bottom: 20px;
     }
